Fixed missaligned text

--- a/assets/css/dashPix.css
+++ b/assets/css/dashPix.css
@@ -3,8 +3,5 @@
 	background-color: #fff;
 	border-radius: 3px;
 	margin-right: 5px;
-}
-
-.news .alert .title * {
 	vertical-align: middle;
 }
